tests/baselines/reference/parserFunctionDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration1.ts (1 errors) ====
    declare module M {
      declare function F();
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    }